[package]
name = "programmer"
version = "0.2.0"
authors = ["Jonathon Pendleury <jonathon.pendlebury@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.0"
env_logger = "0.8.3"
log = "0.4.14"
clap = "2.33.3"